--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,11 @@ html {
     box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: none;
+}
+
 .nav-menu {
   display: flex;
   width: 100%;
